# Tiny_Music_Player

./: .gitignore  Audio.h  CMakeLists.txt  Controls.ai  HAudio.cpp  HMain.cpp  Main.cpp  Main.h  QtMainGUI.h  main.ui  ref.drawio  untitled_zh_CN.ts
tests/: Ana.lrc
